--- a/GoIT/markup/lesson1/task1.html
+++ b/GoIT/markup/lesson1/task1.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>О себе</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="main">
+		<div class="header">
+			<h1>Ловыгин Никита Александрович</h1>
+			<img hspace="157" src="img1.jpg" alt="Это я :)">
+			<p>Инженер-эникейщик на ЧАЭС :)</p>
+		</div>
+		<div class="article">
+			<p>Хочу учить фронтенд, потому что:</p>
+			<ul>
+				<li>Нет возможности для роста</li>
+				<li>Платят очень мало</li>
+				<li>Интернет - это будущее (и уже - настоящее)</li>
+			</ul>
+		</div>
+		<div class="article">
+			<div class="block">
+				<span>Мой контактный телефон</span>
+				<span>+380501387171</span>
+			</div>
+			<div class="block">
+				<span>Мой профиль вконтакте</span>
+				<a href="https://vk.com/rsraven">vk.com</a>
+			</div>
+		</div>
+		<div class="footer"> <!-- этот div можно убрать, но мне кажется, так правильнее -->
+			<div class="block">
+				<span>Мой фидбек:</span>
+				<span>Могу починить ваш компьютер</span>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
