Переделал половину работы. Теперь красиво :)
1)Нет серого фона. Теперь есть.
2)Нет бордер радиус и тени на блоке с визиткой. Есть бордер радиус.
Тень, я так понял, вокруг всей визитки - есть.
3)Цвет бордера. Есть.
4)Ширина картинки, подгони чтоб было как на превьюшке. Есть.

Код:
1) На теги лучше css не натравливать, делать через классы. Переделал.

--- a/GoIT/markup/lesson1/task1.html
+++ b/GoIT/markup/lesson1/task1.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>О себе</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="main">
+	<div class="wrapper">
 		<div class="header">
 			<h1>Ловыгин Никита Александрович</h1>
-			<img hspace="157" src="img1.jpg" alt="Это я :)">
-			<p>Инженер-эникейщик на ЧАЭС :)</p>
+			<img class="header_img" src="img/img1.jpg" alt="Это я :)">
+			<!-- hspace="157" -->
+			<p class="sentence">Инженер-эникейщик на ЧАЭС :)</p>
 		</div>
 		<div class="article">
 			<p>Хочу учить фронтенд, потому что:</p>
