--- a/GoIT/markup/lesson3/index.html
+++ b/GoIT/markup/lesson3/index.html
@@ -3,13 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css\reset.css">
+	<link rel="stylesheet" type="text/css" href="css\style.css">
 </head>
 <body>
 	<div class="wrapper">
 		<div class="header">
-			
+			<h1>
+				<a href="#">
+					<img class="logo" src="img\logo.png" alt="Логотип"></img>
+				</a>
+			</h1>
+			<ul class="header_menu">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Товары</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
 		</div>
+		<div class="content">
+			<div class="sidebar">
+				
+			</div>
+			<div class="article">
+				
+			</div>
+		</div>
+
+		<div class="footer">
 			
+
+		</div>
 	</div>
 </body>
 </html>
