--- a/GoIT/markup/lesson3/index.html
+++ b/GoIT/markup/lesson3/index.html
@@ -23,10 +23,18 @@
 		</div>
 		<div class="content">
 			<div class="sidebar">
-				
+				<ul class="sidebar_menu">
+					<li><a href="#">Ноутбуки</a></li>
+					<li><a href="#">Планшеты</a></li>
+					<li><a href="#">Телефоны</a></li>
+					<li><a href="#">Телевизоры</a></li>
+					<li><a href="#">Бытовая техника</a></li>
+					<li><a href="#">Автотовары</a></li>
+				</ul>
 			</div>
 			<div class="article">
-				
+				<img src="img/bike.jpg" alt="">
+				<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.!</p>
 			</div>
 		</div>
 
