--- a/GoIT/markup/lesson3/index.html
+++ b/GoIT/markup/lesson3/index.html
@@ -33,13 +33,20 @@
 				</ul>
 			</div>
 			<div class="article">
-				<img src="img/bike.jpg" alt="">
+				<div class="article_image">
+					<img src="img\bike.jpg" alt="Изображение товара">
+				</div>
 				<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.!</p>
 			</div>
 		</div>
-
 		<div class="footer">
-			
+			<ul class="footer_menu">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Товары</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
+				<li><span>2014 &copy All rights reserved</span></li>
+			</ul>
 
 		</div>
 	</div>
