Доделал ДЗ№3 бонусное.

--- a/GoIT/markup/lesson3extra/index.html
+++ b/GoIT/markup/lesson3extra/index.html
@@ -17,12 +17,12 @@
 			</ul>
 		</div>
 		<div class="content clearfix">
-			<figure class="country"><img class="country_photo" src="img/india.jpg" alt=""><figcaption>India</figcaption></figure>
-			<figure class="country"><img class="country_photo" src="img/nepal.jpg" alt=""><figcaption>Nepal</figcaption></figure>
-			<figure class="country"><img class="country_photo" src="img/tibet.jpg" alt=""><figcaption>Tibet</figcaption></figure>
-			<figure class="country"><img class="country_photo" src="img/bhutan.jpg" alt=""><figcaption>Bhutan</figcaption></figure>
-			<figure class="country"><img class="country_photo" src="img/sri-lanka.jpg" alt=""><figcaption>Sri Lanka</figcaption></figure>
-			<figure class="country"><img class="country_photo" src="img/maldives.jpg" alt=""><figcaption>Maldives</figcaption></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/india.png" alt=""><figcaption>India</figcaption></a></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/nepal.png" alt=""><figcaption>Nepal</figcaption></a></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/tibet.png" alt=""><figcaption>Tibet</figcaption></a></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/bhutan.png" alt=""><figcaption>Bhutan</figcaption></a></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/sri-lanka.png" alt=""><figcaption>Sri Lanka</figcaption></a></figure>
+			<figure class="country"><a href="#"><img class="country_photo" src="img/maldives.png" alt=""><figcaption>Maldives</figcaption></a></figure>
 		</div>
 		<div class="footer">
 			<p>Copyright (c) asia-holidays.com. 2010 </p>
