Доделал ДЗ№4 для мазохистов. Полностью согласен с названием.

--- a/GoIT/markup/lesson4extra/index.html
+++ b/GoIT/markup/lesson4extra/index.html
@@ -81,7 +81,7 @@
 						<div class="column_1">
 							<p>Информация</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quis voluptas adipisci. Mollitia suscipit obcaecati error facilis quam accusamus fuga, maxime possimus iure aut, molestiae sit commodi, excepturi aspernatur rem.</p></div>
-						<div class="column_2"></div>
+						<div class="column_2"><p>Если здесь ничего нет, то третья колонка схлопывается :(</p></div>
 						<div class="column_3">
 							<p>Новости</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ea rerum ipsum aspernatur ducimus! Quibusdam tempore explicabo, ducimus odio accusamus temporibus error deleniti, sint, minus repellat in blanditiis. Distinctio, cumque.
