--- a/GoIT/markup/lesson4/index.html
+++ b/GoIT/markup/lesson4/index.html
@@ -31,7 +31,7 @@
 			<img class="content_img" src="img/maldives_big.jpg" alt="Maldives">
 			<ul class="main_menu">
 				<li><a href="">Главная</a></li>
-				<li><a href="">Путешествие &#9660</a>
+				<li><a href="">Путешествие &#9660;</a>
 					<ul>
 						<li><a href="">Путешествие 1</a></li>
 						<li><a href="">Путешествие 2</a></li>
@@ -40,7 +40,7 @@
 						<li><a href="">Путешествие 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Услуги &#9660</a>
+				<li><a href="">Услуги &#9660;</a>
 					<ul>
 						<li><a href="">Услуга 1</a></li>
 						<li><a href="">Услуга 2</a></li>
@@ -49,7 +49,7 @@
 						<li><a href="">Услуга 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Партнерам &#9660</a>
+				<li><a href="">Партнерам &#9660;</a>
 					<ul>
 						<li><a href="">Партнерам 1</a></li>
 						<li><a href="">Партнерам 2</a></li>
