--- a/GoIT/markup/lesson4extra/index.html
+++ b/GoIT/markup/lesson4extra/index.html
@@ -31,7 +31,7 @@
 			<img class="content_img" src="img/maldives_big.jpg" alt="Maldives">
 			<ul class="main_menu">
 				<li><a href="">Главная</a></li>
-				<li><a href="">Путешествие &#9660</a>
+				<li><a href="">Путешествие &#9660;</a>
 					<ul>
 						<li><a href="">Путешествие 1</a></li>
 						<li><a href="">Путешествие 2</a></li>
@@ -40,7 +40,7 @@
 						<li><a href="">Путешествие 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Услуги &#9660</a>
+				<li><a href="">Услуги &#9660;</a>
 					<ul>
 						<li><a href="">Услуга 1</a></li>
 						<li><a href="">Услуга 2</a></li>
@@ -49,7 +49,7 @@
 						<li><a href="">Услуга 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Партнерам &#9660</a>
+				<li><a href="">Партнерам &#9660;</a>
 					<ul>
 						<li><a href="">Партнерам 1</a></li>
 						<li><a href="">Партнерам 2</a></li>
@@ -81,7 +81,7 @@
 						<div class="column_1">
 							<p>Информация</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quis voluptas adipisci. Mollitia suscipit obcaecati error facilis quam accusamus fuga, maxime possimus iure aut, molestiae sit commodi, excepturi aspernatur rem.</p></div>
-						<div class="column_2"></div>
+						<div class="column_2"><p>Если здесь ничего нет, то третья колонка схлопывается :(</p></div>
 						<div class="column_3">
 							<p>Новости</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ea rerum ipsum aspernatur ducimus! Quibusdam tempore explicabo, ducimus odio accusamus temporibus error deleniti, sint, minus repellat in blanditiis. Distinctio, cumque.
