--- a/GoIT/markup/lesson4/index.html
+++ b/GoIT/markup/lesson4/index.html
@@ -30,37 +30,37 @@
 		<div class="content">
 			<img class="content_img" src="img/maldives_big.jpg" alt="Maldives">
 			<ul class="main_menu">
-				<li><a href="">Главная</a></li>
-				<li><a href="">Путешествие &#9660;</a>
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Путешествие<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Путешествие 1</a></li>
-						<li><a href="">Путешествие 2</a></li>
-						<li><a href="">Путешествие 3</a></li>
-						<li><a href="">Путешествие 4</a></li>
-						<li><a href="">Путешествие 5</a></li>
+						<li><a href="#">Путешествие 1</a></li>
+						<li><a href="#">Путешествие 2</a></li>
+						<li><a href="#">Путешествие 3</a></li>
+						<li><a href="#">Путешествие 4</a></li>
+						<li><a href="#">Путешествие 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Услуги &#9660;</a>
+				<li><a href="">Услуги<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Услуга 1</a></li>
-						<li><a href="">Услуга 2</a></li>
-						<li><a href="">Услуга 3</a></li>
-						<li><a href="">Услуга 4</a></li>
-						<li><a href="">Услуга 5</a></li>
+						<li><a href="#">Услуга 1</a></li>
+						<li><a href="#">Услуга 2</a></li>
+						<li><a href="#">Услуга 3</a></li>
+						<li><a href="#">Услуга 4</a></li>
+						<li><a href="#">Услуга 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Партнерам &#9660;</a>
+				<li><a href="">Партнерам<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Партнерам 1</a></li>
-						<li><a href="">Партнерам 2</a></li>
-						<li><a href="">Партнерам 3</a></li>
-						<li><a href="">Партнерам 4</a></li>
-						<li><a href="">Партнерам 5</a></li>
+						<li><a href="#">Партнерам 1</a></li>
+						<li><a href="#">Партнерам 2</a></li>
+						<li><a href="#">Партнерам 3</a></li>
+						<li><a href="#">Партнерам 4</a></li>
+						<li><a href="#">Партнерам 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Отзывы клиентов</a></li>
-				<li><a href="">О нас</a></li>
-				<li><a href="">Контакты</a></li>
+				<li><a href="#">Отзывы клиентов</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 			</ul>
 			<div class="content_table">
 				<div class="column_1">
