--- a/GoIT/markup/lesson4extra/index.html
+++ b/GoIT/markup/lesson4extra/index.html
@@ -30,58 +30,45 @@
 		<div class="content">
 			<img class="content_img" src="img/maldives_big.jpg" alt="Maldives">
 			<ul class="main_menu">
-				<li><a href="">Главная</a></li>
-				<li><a href="">Путешествие &#9660;</a>
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Путешествие<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Путешествие 1</a></li>
-						<li><a href="">Путешествие 2</a></li>
-						<li><a href="">Путешествие 3</a></li>
-						<li><a href="">Путешествие 4</a></li>
-						<li><a href="">Путешествие 5</a></li>
+						<li><a href="#">Путешествие 1</a></li>
+						<li><a href="#">Путешествие 2</a></li>
+						<li><a href="#">Путешествие 3</a></li>
+						<li><a href="#">Путешествие 4</a></li>
+						<li><a href="#">Путешествие 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Услуги &#9660;</a>
+				<li><a href="">Услуги<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Услуга 1</a></li>
-						<li><a href="">Услуга 2</a></li>
-						<li><a href="">Услуга 3</a></li>
-						<li><a href="">Услуга 4</a></li>
-						<li><a href="">Услуга 5</a></li>
+						<li><a href="#">Услуга 1</a></li>
+						<li><a href="#">Услуга 2</a></li>
+						<li><a href="#">Услуга 3</a></li>
+						<li><a href="#">Услуга 4</a></li>
+						<li><a href="#">Услуга 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Партнерам &#9660;</a>
+				<li><a href="">Партнерам<p>&#9660;</p></a>
 					<ul>
-						<li><a href="">Партнерам 1</a></li>
-						<li><a href="">Партнерам 2</a></li>
-						<li><a href="">Партнерам 3</a></li>
-						<li><a href="">Партнерам 4</a></li>
-						<li><a href="">Партнерам 5</a></li>
+						<li><a href="#">Партнерам 1</a></li>
+						<li><a href="#">Партнерам 2</a></li>
+						<li><a href="#">Партнерам 3</a></li>
+						<li><a href="#">Партнерам 4</a></li>
+						<li><a href="#">Партнерам 5</a></li>
 					</ul>
 				</li>
-				<li><a href="">Отзывы клиентов</a></li>
-				<li><a href="">О нас</a></li>
-				<li><a href="">Контакты</a></li>
+				<li><a href="#">Отзывы клиентов</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 			</ul>
-			<!-- <div class="content_table">
-				<div class="column_1">
-					<p>Информация</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quis voluptas adipisci. Mollitia suscipit obcaecati error facilis quam accusamus fuga, maxime possimus iure aut, molestiae sit commodi, excepturi aspernatur rem.</p>
-				</div>
-				<div class="column_2">
-				</div>
-				<div class="column_3">
-					<p>Новости</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ea rerum ipsum aspernatur ducimus! Quibusdam tempore explicabo, ducimus odio accusamus temporibus error deleniti, sint, minus repellat in blanditiis. Distinctio, cumque.
-					Incidunt, repellat non voluptate voluptas, blanditiis reiciendis, officiis ducimus quia porro, et animi rem possimus dicta rerum eaque quaerat. Totam numquam reiciendis tempora aspernatur quas, iure facilis at veritatis nulla? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolores delectus quisquam, voluptatum praesentium culpa aliquid eligendi deserunt, accusamus deleniti hic ut eaque, obcaecati cum? Asperiores dolores quos tempora perspiciatis!</p>
-				</div>
-			</div> -->
 			<div class="bg_right">
 				<div class="bg_center">
 					<div class="bg_left">
 						<div class="column_1">
 							<p>Информация</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quis voluptas adipisci. Mollitia suscipit obcaecati error facilis quam accusamus fuga, maxime possimus iure aut, molestiae sit commodi, excepturi aspernatur rem.</p></div>
-						<div class="column_2"><p>Если здесь ничего нет, то третья колонка схлопывается :(</p></div>
+						<div class="column_2"></div>
 						<div class="column_3">
 							<p>Новости</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ea rerum ipsum aspernatur ducimus! Quibusdam tempore explicabo, ducimus odio accusamus temporibus error deleniti, sint, minus repellat in blanditiis. Distinctio, cumque.
