Продолжаю работу над ДЗ№6

--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<img src="img/tel.png" alt="">
 		<p>(044)123-45-67 (044)567-89-10</p>
-		<form action="#">
+		<form class="login_form" action="#">
 			<img src="man_icon.png" alt="">
 			<input type="text" name="login" id="" placeholder="логин">
 			<input type="password" name="password" id="" placeholder="пароль">
@@ -19,14 +19,14 @@
 			<a href="#">регистрация</a>
 			<a href="#">забыли пароль?</a>
 		</form>
-		<div class="site_map">
-			<a href="#"><img src="img/map_home.png" alt="Home"></a>
-			<a href="#"><img src="img/map_map.png" alt="Map"></a>
-			<a href="#"><img src="img/map_letter.png" alt="Write to Us"></a>
-		</div>
+		<ul class="site_map">
+			<li><a class="home" href="#"></a></li>
+			<li><a class="net" href="#"></a></li>
+			<li><a class="letter" href="#"></a></li>
+		</ul>
 	</header>
-	<img src="img/big_tire.jpg" alt="">
-	<nav>
+	<img class="banner" src="img/banner.png" alt="">
+	<nav class="main_menu">
 		<ul>
 			<li><a href="#"></a>о компании</li>
 			<li><a href="#"></a>оплата</li>
@@ -40,7 +40,27 @@
 		<p>на сумму:</p>
 		<p>0,00 грн.</p>
 	</nav>
+<main role="main">
+	<section class="searcher">
+			
+		<form action=""></form>
+		<form action=""></form>
+		<form action=""></form>
 
+	</section>
+	<aside class="left_sidebar">
+		
+	</aside>
+	<figure>
+		
+	</figure>
+	<aside class="right_sidebar">
+		
+	</aside>
+</main>
+<footer>
 	
+
+</footer>
 </body>
 </html>
