Продолжаю работу над ДЗ№6 - доделал хедер, левый сайдбар, начал секцию с шинами.

--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -7,63 +7,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<<<<<<< HEAD
-	<header>
-		<img src="img/tel.png" alt="">
-		<p>(044)123-45-67 (044)567-89-10</p>
-		<form class="login_form" action="#">
-			<img src="man_icon.png" alt="">
-			<input type="text" name="login" id="" placeholder="логин">
-			<input type="password" name="password" id="" placeholder="пароль">
-			<a href="#">вход</a>
-			<span>|</span>
-			<a href="#">регистрация</a>
-			<a href="#">забыли пароль?</a>
-		</form>
-		<ul class="site_map">
-			<li><a class="home" href="#"></a></li>
-			<li><a class="net" href="#"></a></li>
-			<li><a class="letter" href="#"></a></li>
-		</ul>
-	</header>
-	<img class="banner" src="img/banner.png" alt="">
-	<nav class="main_menu">
-		<ul>
-			<li><a href="#"></a>о компании</li>
-			<li><a href="#"></a>оплата</li>
-			<li><a href="#"></a>доставка</li>
-			<li><a href="#"></a>статьи</li>
-			<li><a href="#"></a>контакты</li>
-		</ul>
-		<img src="img/basket.png" alt="">
-		<p>товаров:</p>
-		<p>0</p>
-		<p>на сумму:</p>
-		<p>0,00 грн.</p>
-	</nav>
-<main role="main">
-	<section class="searcher">
-			
-		<form action=""></form>
-		<form action=""></form>
-		<form action=""></form>
-
-	</section>
-	<aside class="left_sidebar">
-		
-	</aside>
-	<figure>
-		
-	</figure>
-	<aside class="right_sidebar">
-		
-	</aside>
-</main>
-<footer>
-	
-
-</footer>
-=======
 	<div class="wrapper">
 		<header>
 			<img class="tel" src="img/tel.png" alt="">
@@ -112,7 +55,7 @@
 				<p><img src="img/catalog.png" alt="">каталог продукции:</p>
 				<ul class="left_menu">
 					<li><p><img src="img/tires_discs.png" alt="">шины</p>
-						<ul>
+						<ul class="inner_menu">
 							<li><a href="#">Наименование 1</a></li>
 							<li><a href="#">Наименование 2</a></li>
 							<li><a href="#">Наименование 3</a></li>
@@ -120,7 +63,7 @@
 						</ul>
 					</li>
 					<li><p><img src="img/tires_discs.png" alt="">диски</p>
-						<ul>
+						<ul class="inner_menu">
 							<li><a href="#">Наименование 1</a></li>
 							<li><a href="#">Наименование 2</a></li>
 							<li><a href="#">Наименование 3</a></li>
@@ -128,7 +71,7 @@
 						</ul>
 					</li>
 					<li><p><img src="img/tires_discs.png" alt="">болты</p>
-						<ul>
+						<ul class="inner_menu">
 							<li><a href="#">Наименование 1</a></li>
 							<li><a href="#">Наименование 2</a></li>
 							<li><a href="#">Наименование 3</a></li>
@@ -137,9 +80,62 @@
 					</li>
 				</ul>
 			</aside>
-			<figure>
-				
-			</figure>
+			<section class="goods">
+				<figure>
+					<h2>Goodyear</h2>
+					<h3>Ultra Grip Extreme</h3>
+					<img src="img/goodyear.png" alt="">
+					<figcaption>90.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Nokian</h2>
+					<h3>Hakkapeliitta R</h3>
+					<img src="img/nokian.png" alt="">
+					<figcaption>115.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Hankook</h2>
+					<h3>K 708 155/65 R14</h3>
+					<img src="img/hankook.png" alt="">
+					<figcaption>393.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Goodyear</h2>
+					<h3>Ultra Grip Extreme</h3>
+					<img src="img/goodyear.png" alt="">
+					<figcaption>90.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Nokian</h2>
+					<h3>Hakkapeliitta R</h3>
+					<img src="img/nokian.png" alt="">
+					<figcaption>115.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Hankook</h2>
+					<h3>K 708 155/65 R14</h3>
+					<img src="img/hankook.png" alt="">
+					<figcaption>393.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Goodyear</h2>
+					<h3>Ultra Grip Extreme</h3>
+					<img src="img/goodyear.png" alt="">
+					<figcaption>90.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Nokian</h2>
+					<h3>Hakkapeliitta R</h3>
+					<img src="img/nokian.png" alt="">
+					<figcaption>115.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<h2>Hankook</h2>
+					<h3>K 708 155/65 R14</h3>
+					<img src="img/hankook.png" alt="">
+					<figcaption>393.00 грн.</figcaption>
+				</figure>
+			</section>
 			<aside class="right_sidebar">
 				
 			</aside>
@@ -149,6 +145,5 @@
 
 		</footer>
 	</div>
->>>>>>> Продолжаю работу над ДЗ№6
 </body>
 </html>
