Доделал ДЗ№6, пока без попиксельной вёрстки.

--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -15,7 +15,8 @@
 				<img src="img/man_icon.png" alt="">
 				<input type="text" name="login" id="" placeholder="логин">
 				<input type="password" name="password" id="" placeholder="пароль">
-				<a href="#">вход</a>
+				<input class="enter" type="submit" value="вход">
+				<!-- <a href="#">вход</a> -->
 				<span>|</span>
 				<a href="#">регистрация</a>
 				<a href="#">забыли пароль?</a>
@@ -80,69 +81,95 @@
 					</li>
 				</ul>
 			</aside>
-			<section class="goods">
-				<figure>
+			<figure class="goods">
+				<a href="#">
 					<h2>Goodyear</h2>
 					<h3>Ultra Grip Extreme</h3>
-					<img src="img/goodyear.png" alt="">
-					<figcaption>90.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/goodyear.png" alt=""></p>
+					<span>90.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Nokian</h2>
 					<h3>Hakkapeliitta R</h3>
-					<img src="img/nokian.png" alt="">
-					<figcaption>115.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/nokian.png" alt=""></p>
+					<span>115.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Hankook</h2>
 					<h3>K 708 155/65 R14</h3>
-					<img src="img/hankook.png" alt="">
-					<figcaption>393.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/hankook.png" alt=""></p>
+					<span>393.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Goodyear</h2>
 					<h3>Ultra Grip Extreme</h3>
-					<img src="img/goodyear.png" alt="">
-					<figcaption>90.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/goodyear.png" alt=""></p>
+					<span>90.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Nokian</h2>
 					<h3>Hakkapeliitta R</h3>
-					<img src="img/nokian.png" alt="">
-					<figcaption>115.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/nokian.png" alt=""></p>
+					<span>115.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Hankook</h2>
 					<h3>K 708 155/65 R14</h3>
-					<img src="img/hankook.png" alt="">
-					<figcaption>393.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/hankook.png" alt=""></p>
+					<span>393.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Goodyear</h2>
 					<h3>Ultra Grip Extreme</h3>
-					<img src="img/goodyear.png" alt="">
-					<figcaption>90.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/goodyear.png" alt=""></p>
+					<span>90.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Nokian</h2>
 					<h3>Hakkapeliitta R</h3>
-					<img src="img/nokian.png" alt="">
-					<figcaption>115.00 грн.</figcaption>
-				</figure>
-				<figure>
+					<p><img src="img/nokian.png" alt=""></p>
+					<span>115.00</span><span>грн.</span>
+				</a>
+				<a href="#">
 					<h2>Hankook</h2>
 					<h3>K 708 155/65 R14</h3>
-					<img src="img/hankook.png" alt="">
-					<figcaption>393.00 грн.</figcaption>
-				</figure>
-			</section>
+					<p><img src="img/hankook.png" alt=""></p>
+					<span>393.00</span><span>грн.</span>
+				</a>
+			</figure>
 			<aside class="right_sidebar">
-				
+				<p><img src="img/catalog.png" alt="">бренды:</p>
+				<form action="#">
+					<p><img src="img/tires_discs.png" alt="">шины</p>
+					<label><input type="checkbox" name="" id="tires">Бренд 1</label>
+					<label><input type="checkbox" name="" id="tires">Бренд 2</label>
+					<label><input type="checkbox" name="" id="tires">Бренд 3</label>
+					<p><img src="img/tires_discs.png" alt="">диски</p>
+					<label><input type="checkbox" name="" id="rims">Бренд 1</label>
+					<label><input type="checkbox" name="" id="rims">Бренд 2</label>
+					<label><input type="checkbox" name="" id="rims">Бренд 3</label>
+					<input type="submit" value="выбрать">
+				</form>
 			</aside>
+			<figure class="bottom_menu">
+				<a href="#"><img src="img/toyo_tires.png" alt=""></a>
+				<a href="#"><img src="img/bridgestone.png" alt=""></a>
+				<a href="#"><img src="img/continental_tire.png" alt=""></a>
+				<a href="#"><img src="img/cooper_tires.png" alt=""></a>
+				<a href="#"><img src="img/avon_tyres.png" alt=""></a>
+				<a href="#"><img src="img/tire_factory.png" alt=""></a>
+				<a href="#"><img src="img/pirelli.png" alt=""></a>
+				<a href="#"><img src="img/dunlop.png" alt=""></a>
+			</figure>
 		</main>
 		<footer>
-			
-
+			<ul class="footer_menu">
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Статьи</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<p>Создание сайта &copy; Global Vision</p>
 		</footer>
 	</div>
 </body>
