ДЗ№6. Пиксельная точность хедера.

--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -37,11 +37,11 @@
 				<li><a href="#">контакты</a></li>
 			</ul>
 			<div class="basket">
-				<img src="img/basket.png" alt="">
-				<p>товаров:</p>
-				<p class="number">0</p>
+				<p class="price">0,00 грн.</p>
 				<p class="sum">на сумму:</p>
-				<p class="number">0,00 грн.</p>
+				<p class="number">0</p>
+				<p class="items">товаров:</p>
+				<img src="img/basket.png" alt="">
 			</div>	
 		</nav>
 		<main role="main">
