--- a/GoIT/markup/lesson5/Mondrian Red, Blue, Yellow/index.html
+++ b/GoIT/markup/lesson5/Mondrian Red, Blue, Yellow/index.html
@@ -8,48 +8,41 @@
 </head>
 <body>
 	<table>
-		<!-- <tr class="height1"> -->
 		<tr>
-			<td class="width2 height1 noborder_top noborder_left" colspan="2"></td>
-			<td class="width3 noborder_top" colspan="2"></td>
-			<td class="width2 yellow noborder_top noborder_right" colspan="2"></td>
-		</tr>	
-		<!-- <tr class="height2"> -->
-		<tr>
-			<td class="width1 height2 noborder_left"></td>
-			<td class="red" colspan="3" rowspan="2"></td>
-			<td class="yellow noborder_right" colspan="2"></td>
+			<td colspan="2"></td>
+			<td colspan="3"></td>
+			<td class="yellow" colspan="2"></td>
 		</tr>
-		<!-- <tr class="height2"> -->
 		<tr>
-			<td class="noborder_left" rowspan="2"></td>
-			<td class="height2"></td>
-			<td class="noborder_right"></td>
+			<td rowspan="2"></td>
+			<td class="red" colspan="4" rowspan="4"></td>
+			<td class="yellow" colspan="2" rowspan="2"></td>
 		</tr>
-		<!-- <tr class="height1"> -->
+		<tr></tr>
 		<tr>
-			<td class="width1 height1 black"></td>
-			<td class="width1 black"></td>
-			<td class="width2"></td>
-			<td class="width2 noborder_right" colspan="2"></td>
+			<td rowspan="3"></td>
+			<td rowspan="2"></td>
+			<td rowspan="2"></td>
 		</tr>
-		<!-- <tr class="height1"> -->
+		<tr></tr>
 		<tr>
-			<td class="yellow noborder_left noborder_bottom" rowspan="3"></td>
-			<td class="black height1"></td>
 			<td class="black"></td>
-			<td></td>
-			<td class="blue noborder_right" colspan="2" rowspan="2"></td>
+			<td class="black"></td>
+			<td colspan="2"></td>
+			<td colspan="2"></td>
 		</tr>
-		<!-- <tr class="height05"> -->
 		<tr>
-			<td class="noborder_bottom" colspan="2" rowspan="2"></td>
-			<td class="black height05"></td>
+			<td class="yellow" rowspan="3"></td>
+			<td class="black"></td>
+			<td class="black"></td>
+			<td colspan="2"></td>
+			<td class="blue" colspan="2" rowspan="2"></td>
 		</tr>
-		<!-- <tr class="height05"> -->
 		<tr>
-			<td class="height05 noborder_bottom noborder_right" colspan="3"></td>
+			<td colspan="2" rowspan="2"></td>
+			<td class="black" colspan="2"></td>
 		</tr>
+		<tr colspan="4"></tr>
 	</table>
 </body>
 </html>
