--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -45,13 +45,103 @@
 			</div>	
 		</nav>
 		<main role="main">
-			<!-- <section class="searcher">
+			<section class="searcher clearfix">
+				<form class="search_auto" action="#">
+					<h2>Поиск по автомобилю</h2>
+					<fieldset class="rims">
+						<legend>Диски:</legend>
+						<dl>
+							<dt class="dt_auto_name">Марка<span>авто:</span></dt>
+							<dd class="auto_name">
+								<select name="auto_name" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="dt_auto_model">Модель<p>автомобиля:</p></dt>
+							<dd class="auto_model">
+								<select name="auto_model" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="dt_auto_year">Год выпуска<p>автомобиля:</p></dt>
+							<dd class="auto_year">
+								<select name="auto_year" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="">Комплектация:</dt>
+							<dd class="auto_options">
+								<select name="auto_options" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+						</dl>						
+					</fieldset>
+					<fieldset class="tires">
+						<legend>Шины:</legend>
+						<dl>
+							<dt class="dt_auto_name">Марка<span>авто:</span></dt>
+							<dd class="auto_name">
+								<select name="auto_name" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="dt_auto_model">Модель<p>автомобиля:</p></dt>
+							<dd class="auto_model">
+								<select name="auto_model" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="dt_auto_year">Год выпуска<p>автомобиля:</p></dt>
+							<dd class="auto_year">
+								<select name="auto_year" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+							<dt class="">Комплектация:</dt>
+							<dd class="auto_options">
+								<select name="auto_options" id="">
+									<option selected disabled></option>
+									<option value="BMW">BMW</option>
+									<option value="Mercedes">Mercedes</option>
+									<option value="KIA">KIA</option>
+								</select>
+							</dd>
+						</dl>						
+					</fieldset>
+					<input type="submit" value="поиск...">
+				</form>
+				<form class="search_tires" action="#">
 					
-				<form action=""></form>
-				<form action=""></form>
-				<form action=""></form>
 
-			</section> -->
+				</form>
+				<form class="search_rims" action="#">
+					
+
+				</form>
+
+			</section>
 			<aside class="left_sidebar">
 				<p><img src="img/catalog.png" alt="">каталог продукции:</p>
 				<ul class="left_menu">
