--- a/GoIT/markup/lesson5/Cadastre/index.html
+++ b/GoIT/markup/lesson5/Cadastre/index.html
@@ -26,36 +26,38 @@
 		</ul>
 	</div>
 	<div class="content">
-		<h1>Cadastre-se</h1>
-		<form action="/">
-			<div class="facebook_btn">
-				<a href="#"><img src="img/facebook.png" alt="Login with Facebook"></a>
-			</div>
-			<p class="ou_line">ou</p>
-			<div class="text_input">
-				<input type="text" name="first_name" id="" placeholder="First Name" maxlength=50 required>
-			</div>
-			<div class="text_input">
-				<input type="text" name="last_name" id="" placeholder="Last Name" maxlength=50>
-			</div>
-			<div class="text_input">
-				<input type="email" name="email" id="" placeholder="Email Address" required maxlength=50>
-			</div>
-			<div class="text_input">
-				<input type="password" name="password" id="" placeholder="Choose Password" maxlength=50 required>
-			</div>
-			<div class="text_input">
-				<input type="password" name="password_c" id="" placeholder="Password Confirm" maxlength=50 required>
-			</div>
-			<div class="checkbox">
-				<label><input type="checkbox" name="" id="delivery_conf">Send me Youbike updates and tips</label>
-			</div>
-			<div class="send_btn">
-				<input type="image" src="img/send.png" alt="Create my Account">
-			</div>
-			<span>By clicking the button above, you agree to the Terms of Service</span>
-			<span>View our Privacy Policy</span>
-		</form>
+		<div class="form">
+			<h1>Cadastre-se</h1>
+			<form action="/">
+				<div class="facebook_btn">
+					<a href="#"><img src="img/facebook.png" alt="Login with Facebook"></a>
+				</div>
+				<p class="ou_line">ou</p>
+				<div class="text_input">
+					<input type="text" name="first_name" id="" placeholder="First Name" maxlength=50 required>
+				</div>
+				<div class="text_input">
+					<input type="text" name="last_name" id="" placeholder="Last Name" maxlength=50>
+				</div>
+				<div class="text_input">
+					<input type="email" name="email" id="" placeholder="Email Address" required maxlength=50>
+				</div>
+				<div class="text_input">
+					<input type="password" name="password" id="" placeholder="Choose Password" maxlength=50 required>
+				</div>
+				<div class="text_input">
+					<input type="password" name="password_c" id="" placeholder="Password Confirm" maxlength=50 required>
+				</div>
+				<div class="checkbox">
+					<label><input type="checkbox" name="" id="delivery_conf">Send me Youbike updates and tips</label>
+				</div>
+				<div class="send_btn">
+					<input type="image" src="img/send.png" alt="Create my Account">
+				</div>
+				<span>By clicking the button above, you agree to the Terms of Service</span>
+				<span>View our Privacy Policy</span>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
