Продолжаем работу с ДЗ№7

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -7,6 +7,113 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- HEADER - лого, меню, слайдер-->
+<header>
+
+	<h2><a href="#">Pingbuller></a></h2> <!-- задать стиль для h2 - 2 последние буквы другого цвета -->
+	<nav>
+		<ul class="menu">
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+		</ul>
+	</nav>
+	<section> <!-- сюда поставим тёмный фон -->
+		<!-- слайдер -->
+		<h1></h1>
+		<h3></h3>
+		<p></p>
+		<img src="" alt="">
+		<!-- конец слайдера -->
+	</section>
+</header>
+<!-- END OF HEADER -->
+<!-- MAIN -->
+<main>
+	<section> <!-- сюда поставим gradient -->
+		<!-- 3 same blocks with bg-icon, padding -->
+		<div>
+			<h4></h4>
+			<p></p>
+			<a href="#"></a>
+		</div>
+		<div>
+			<h4></h4>
+			<p></p>
+			<a href="#"></a>
+		</div>
+		<div>
+			<h4></h4>
+			<p></p>
+			<a href="#"></a>
+		</div>
+	</section>
+
+	<section> <!-- 3 довольно разных блока -->
+
+		<div> <!-- не забыть иконку в bg -->
+			<h4><a href="#"></a></h4>
+			<p></p>
+			<!-- точка - через bg или img-->
+		</div>
+
+		<div>
+			<h4></h4>
+			<a href="#">
+				<p></p>
+				<p></p>
+			</a>
+			<a href="#">
+				<p></p>
+				<p></p>
+			</a>
+			<a href="#">
+				<p></p>
+				<p></p>
+			</a>
+			<a href="#"></a>
+		</div>
+
+		<div> <!-- 6 центрированных картинок-ссылок  - я думаю, ul>li-->
+		</div>
+
+	</section>
+
+	<section>
+		<div>
+			<h2><a href="#"></a></h2>
+			<p></p> <!-- копирайт совсем не похож на p -->
+			<p></p>
+		</div>
+		<div>
+			<h4><a href="#"></a></h4>
+			<p></p>
+		</div>
+		<div>
+			<h4><a href="#"></a></h4>
+			<p></p>
+		</div>
+	</section>
 	
+
+</main>
+<footer>
+	
+	<nav>
+		<ul class="menu">
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+			<li class="menu__item"><a class="menu__link" href="#"></a></li>
+		</ul>
+	</nav>
+	<p></p>
+
+</footer>
 </body>
 </html>
