ДЗ№7. Доделал слайдер и хедер в целом. Начал фиолетовый блок.

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -23,37 +23,49 @@
 		</nav>
 	</section>
 	<section class="slider">
-			<a class="slider__arrow slider__arrow--left" href="#">left</a>
-			<a class="slider__arrow slider__arrow--right" href="#">right</a>
-		<div class="wrapper">
-			<div class="article article--slider">
-				<p class="heading1">lorem ipsum dolor</p>
-				<p class="heading3">it will make all of your dreams come true</p>
-				<p class="article__text">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id </p>
+		<div class="slider__wrapper">
+			<a class="slider__arrow slider__arrow--left" href="#"></a>
+			<a class="slider__arrow slider__arrow--right" href="#"></a>
+			<div class="wrapper">
+				<div class="article article--slider">
+					<p class="heading1">lorem ipsum dolor</p>
+					<p class="heading3">it will make all of your dreams come true</p>
+					<p class="article__text">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id </p>
+				</div>
+				<img class="slider__img" src="img/iphone_vid.png" alt="">
 			</div>
-			<img class="slider__img" src="img/iphone_vid.png" alt="">
 		</div>
+	</section>
+	<section class="wrapper">
+		<ul class="menu menu__slider">
+			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+		</ul>
 	</section>
 </header>
 <!-- END OF HEADER -->
 <!-- MAIN -->
 <main>
-	<section> <!-- сюда поставим gradient -->
+	<section class="violet_block">
 		<!-- 3 same blocks with bg-icon, padding -->
-		<div>
-			<p></p>
-			<p></p>
-			<a href="#"></a>
-		</div>
-		<div>
-			<p></p>
-			<p></p>
-			<a href="#"></a>
-		</div>
-		<div>
-			<p></p>
-			<p></p>
-			<a href="#"></a>
+		<div class="wrapper">
+			<div class="article">
+				<p>123</p>
+				<p>123</p>
+				<a href="#">123</a>
+			</div>
+			<div class="article article--center">
+				<p>123</p>
+				<p>123</p>
+				<a href="#">123</a>
+			</div>
+			<div class="article article--right">
+				<p>123</p>
+				<p>123</p>
+				<a href="#">123</a>
+			</div>
 		</div>
 	</section>
 
