Продолжаю работу над ДЗ№7. Доделал ещё немного.

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -27,10 +27,10 @@
 			<a class="slider__arrow slider__arrow--left" href="#"></a>
 			<a class="slider__arrow slider__arrow--right" href="#"></a>
 			<div class="wrapper">
-				<div class="article article--slider">
-					<p class="heading1">lorem ipsum dolor</p>
+				<div class="article_left article--slider">
+					<p class="heading1">Lorem Ipsum Dolor</p>
 					<p class="heading3">it will make all of your dreams come true</p>
-					<p class="article__text">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id </p>
+					<p class="article__text article__text--slider">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
 				</div>
 				<img class="slider__img" src="img/iphone_vid.png" alt="">
 			</div>
@@ -48,57 +48,66 @@
 <!-- END OF HEADER -->
 <!-- MAIN -->
 <main>
+<!-- VIOLET BLOCK -->
 	<section class="violet_block">
-		<!-- 3 same blocks with bg-icon, padding -->
 		<div class="wrapper">
-			<div class="article">
-				<p>123</p>
-				<p>123</p>
-				<a href="#">123</a>
+			<div class="article_left article--violet_block article_left--violet_block">
+				<p class="heading4">about our company</p>
+				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+				<a class="article__link" href="#">read more</a>
 			</div>
-			<div class="article article--center">
-				<p>123</p>
-				<p>123</p>
-				<a href="#">123</a>
+			<div class="article_right article--violet_block article_right--violet_block">
+				<p class="heading4">about our company</p>
+				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+				<a class="article__link" href="#">read more</a>
 			</div>
-			<div class="article article--right">
-				<p>123</p>
-				<p>123</p>
-				<a href="#">123</a>
+			<div class="article_center article--violet_block article_center--violet_block">
+				<p class="heading4">about our company</p>
+				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+				<a class="article__link" href="#">read more</a>
 			</div>
 		</div>
 	</section>
-
-	<section> <!-- 3 довольно разных блока -->
-
-		<div> <!-- не забыть иконку в bg -->
-			<p><a href="#"></a></p>
-			<p></p>
-			<!-- точка - через bg или img-->
-		</div>
-
-		<div>
-			<p></p>
-			<a href="#">
-				<p></p>
-				<p></p>
-			</a>
-			<a href="#">
-				<p></p>
-				<p></p>
-			</a>
-			<a href="#">
-				<p></p>
-				<p></p>
-			</a>
-			<a href="#"></a>
-		</div>
-
-		<div> <!-- 6 центрированных картинок-ссылок  - я думаю, ul>li-->
-		</div>
-
+<!-- END OF VIOLET BLOCK -->
+<!-- NEWS BLOCK -->
+	<section class="news">
+		<section class="wrapper">
+			<div class="article_left article--news article_left--news">
+				<span class="heading4 heading4--gray">pingbuller</span><a class="heading4 heading4--pink" href="#">starts here</a>
+				<p class="article__text article__text--news">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
+				<ul class="menu menu__news">
+					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
+				</ul>
+			</div>
+			<div class="article_right article--news article_right--news">
+				<p class="heading4 heading4--gray">recent updates</p>
+				<a class="news__link news__link--recent" href="#">
+					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
+					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Recent News</p>
+				</a>
+				<a class="news__link news__link--category" href="#">
+					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
+					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Category</p>
+				</a>
+				<a class="news__link news__link--blog" href="#">
+					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
+					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Blog Updates</p>
+				</a>
+				<a class="article__link article__link--news" href="#">read more here</a>
+			</div>
+		</section>
 	</section>
+<!-- END OF NEWS BLOCK -->
+<!-- IMAGES BLOCK -->
+			<div> <!-- 6 центрированных картинок-ссылок  - я думаю, ul>li-->
+			</div>
 
+<!-- END OF IMAGES BLOCK -->
+
+<!-- COMMENTS BLOCK -->
 	<section>
 		<div>
 			<p class="heading2"><a href="#">Pingbull<span>er</span></a></p>
@@ -114,7 +123,8 @@
 			<p></p>
 		</div>
 	</section>
-	
+
+<!-- END OF COMMENTS BLOCK -->
 
 </main>
 <!-- END OF MAIN -->
