--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -7,18 +7,18 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!-- HEADER - лого, меню, слайдер-->
+<!-- HEADER -->
 <header class="header">
 	<section class="wrapper">
 		<h1><a class="heading2 heading2--header" href="#">Pingbull<span class="heading2 heading2--header--er">er</span></a></h1>
 		<nav>
 			<ul class="menu menu--header">
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">home</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">about</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">blog</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">products</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
 				<li class="menu__item"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
+				<li class="menu__item"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
+				<li class="menu__item"><a class="menu__link menu__link--header" href="#">products</a></li>
+				<li class="menu__item"><a class="menu__link menu__link--header" href="#">blog</a></li>
+				<li class="menu__item"><a class="menu__link menu__link--header" href="#">about</a></li>
+				<li class="menu__item menu__item--last"><a class="menu__link menu__link--header" href="#">home</a></li>
 			</ul>
 		</nav>
 	</section>
@@ -27,7 +27,7 @@
 			<a class="slider__arrow slider__arrow--left" href="#"></a>
 			<a class="slider__arrow slider__arrow--right" href="#"></a>
 			<div class="wrapper">
-				<div class="article_left article--slider">
+				<div class="article article__left article--slider">
 					<p class="heading1">Lorem Ipsum Dolor</p>
 					<p class="heading3">it will make all of your dreams come true</p>
 					<p class="article__text article__text--slider">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
@@ -38,10 +38,10 @@
 	</section>
 	<section class="wrapper">
 		<ul class="menu menu__slider">
-			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
 		</ul>
 	</section>
 </header>
@@ -50,39 +50,39 @@
 <main>
 <!-- VIOLET BLOCK -->
 	<section class="violet_block">
-		<div class="wrapper">
-			<div class="article_left article--violet_block article_left--violet_block">
+		<div class="wrapper wrapper--violet_block">
+			<div class="article article__left article--violet_block article__left--violet_block">
 				<p class="heading4">about our company</p>
 				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
-				<a class="article__link" href="#">read more</a>
+				<a class="article__link article__link--left" href="#">read more</a>
 			</div>
-			<div class="article_right article--violet_block article_right--violet_block">
+			<div class="article article__right article--violet_block article__right--violet_block">
 				<p class="heading4">about our company</p>
 				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
-				<a class="article__link" href="#">read more</a>
+				<a class="article__link article__link--right" href="#">read more</a>
 			</div>
-			<div class="article_center article--violet_block article_center--violet_block">
+			<div class="article article__center article--violet_block article__center--violet_block">
 				<p class="heading4">about our company</p>
 				<p class="article__text article__text--violet_block">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
-				<a class="article__link" href="#">read more</a>
+				<a class="article__link article__link--center" href="#">read more</a>
 			</div>
 		</div>
 	</section>
 <!-- END OF VIOLET BLOCK -->
 <!-- NEWS BLOCK -->
 	<section class="news">
-		<section class="wrapper">
-			<div class="article_left article--news article_left--news">
+		<div class="wrapper">
+			<div class="article article__left article--news article__left--news">
 				<span class="heading4 heading4--gray">pingbuller</span><a class="heading4 heading4--pink" href="#">starts here</a>
 				<p class="article__text article__text--news">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
 				<ul class="menu menu__news">
-					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
-					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
-					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
-					<li class="menu__item"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
 				</ul>
 			</div>
-			<div class="article_right article--news article_right--news">
+			<div class="article article__right article--news article__right--news">
 				<p class="heading4 heading4--gray">recent updates</p>
 				<a class="news__link news__link--recent" href="#">
 					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
@@ -98,51 +98,60 @@
 				</a>
 				<a class="article__link article__link--news" href="#">read more here</a>
 			</div>
-		</section>
+		</div>
 	</section>
 <!-- END OF NEWS BLOCK -->
 <!-- IMAGES BLOCK -->
-			<div> <!-- 6 центрированных картинок-ссылок  - я думаю, ul>li-->
-			</div>
-
-<!-- END OF IMAGES BLOCK -->
-
-<!-- COMMENTS BLOCK -->
-	<section>
-		<div>
-			<p class="heading2"><a href="#">Pingbull<span>er</span></a></p>
-			<p></p> <!-- копирайт совсем не похож на p -->
-			<p></p>
-		</div>
-		<div>
-			<h4><a href="#"></a></h4>
-			<p></p>
-		</div>
-		<div>
-			<h4><a href="#"></a></h4>
-			<p></p>
+	<section class="images">
+		<div class="wrapper">
+			<ul class="menu menu--images">
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--first" href="#"></a></li>
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--second" href="#"></a></li>
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--third" href="#"></a></li>
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--fourth" href="#"></a></li>
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--fifth" href="#"></a></li>
+				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--sixth" href="#"></a></li>
+			</ul>
 		</div>
 	</section>
-
+<!-- END OF IMAGES BLOCK -->
+<!-- COMMENTS BLOCK -->
+	<section class="comments">
+		<div class="wrapper">
+			<div class="article article__left article--comments">
+				<a class="heading2 heading2--comments" href="#">Pigbull<span class="heading2 heading2--comments--er">er</span></a>
+				<p class="copyright_text">Copyright 2013, Pingbull AS</p>
+				<p class="article__text article__text--comments">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+			</div>
+			<div class="article article__right article--comments">
+				<a class="heading4 heading4--gray heading4--comments" href="#">news categories</a>
+				<p  class="article__text article__text--comments">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+			</div>
+			<div class="article article__center article--comments">
+				<a class="heading4 heading4--gray heading4--comments" href="#">recent comments</a>
+				<p  class="article__text article__text--comments">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+			</div>
+		</div>
+	</section>
 <!-- END OF COMMENTS BLOCK -->
-
 </main>
 <!-- END OF MAIN -->
 <!-- FOOTER -->
-<footer>
-	
-	<nav>
-		<ul class="menu">
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-			<li class="menu__item"><a class="menu__link" href="#"></a></li>
-		</ul>
-	</nav>
-	<p></p>
-
+<footer class="footer">
+	<section class="wrapper">
+		<nav>
+			<ul class="menu menu--footer">
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">home</a></li>
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">about</a></li>
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">blog</a></li>
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">products</a></li>
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">lorem ipsum</a></li>
+				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">dolor sit amet</a></li>
+			</ul>
+		</nav>
+		<p class="footer__text">Designed by<span class="footer__text--bold">Pingbull AS</span></p>
+	</section>
 </footer>
+<!-- END OF FOOTER -->
 </body>
 </html>
