Исправил чекбоксы в ДЗ№6.

--- a/GoIT/markup/lesson6/index.html
+++ b/GoIT/markup/lesson6/index.html
@@ -264,13 +264,13 @@
 				<p><img src="img/catalog.png" alt="">бренды:</p>
 				<form action="#">
 					<p><img src="img/tires_discs.png" alt="">шины</p>
-					<label><input type="checkbox" name="" id="tires">Бренд 1</label>
-					<label><input type="checkbox" name="" id="tires">Бренд 2</label>
-					<label><input type="checkbox" name="" id="tires">Бренд 3</label>
+					<label><input type="checkbox" name="" id="tires"><span>Бренд 1</span></label>
+					<label><input type="checkbox" name="" id="tires"><span>Бренд 2</span></label>
+					<label><input type="checkbox" name="" id="tires"><span>Бренд 3</span></label>
 					<p><img src="img/tires_discs.png" alt="">диски</p>
-					<label><input type="checkbox" name="" id="rims">Бренд 1</label>
-					<label><input type="checkbox" name="" id="rims">Бренд 2</label>
-					<label><input type="checkbox" name="" id="rims">Бренд 3</label>
+					<label><input type="checkbox" name="" id="rims"><span>Бренд 1</span></label>
+					<label><input type="checkbox" name="" id="rims"><span>Бренд 2</span></label>
+					<label><input type="checkbox" name="" id="rims"><span>Бренд 3</span></label>
 					<input type="submit" value="выбрать">
 				</form>
 			</aside>
