Продолжаю мучить ДЗ№7

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="mediaqueries.css">
+	<link rel="stylesheet" href="css/mediaqueries.css">
 </head>
 <body>
 <!-- HEADER -->
@@ -14,7 +14,7 @@
 		<h1><a class="heading2 heading2--header" href="#">Pingbull<span class="heading2 heading2--header--er">er</span></a></h1>
 		<nav>
 			<ul class="menu menu--header">
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
+				<li class="menu__item menu__item--first"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
 				<li class="menu__item"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
 				<li class="menu__item"><a class="menu__link menu__link--header" href="#">products</a></li>
 				<li class="menu__item"><a class="menu__link menu__link--header" href="#">blog</a></li>
@@ -74,7 +74,9 @@
 	<section class="news">
 		<div class="wrapper">
 			<div class="article article__left article--news article__left--news">
-				<span class="heading4 heading4--gray">pingbuller</span><a class="heading4 heading4--pink" href="#">starts here</a>
+				<div class="article__head">
+					<span class="heading4 heading4--gray">pingbuller</span><a class="heading4 heading4--pink" href="#">starts here</a>
+				</div>
 				<p class="article__text article__text--news">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
 				<ul class="menu menu__news">
 					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
